# mcp-recon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_recon/: __init__.py  __main__.py  cli.py  client.py  models.py  report.py  runner.py  transport.py
src/mcp_recon/checks/: __init__.py  auth_header_hygiene.py  cors_policy.py  discovery_consistency.py  error_verbosity.py  fingerprint.py  multi_request_pattern.py  scope_binding.py  tool_description_anomalies.py  transport_hygiene.py  undocumented_capabilities.py
src/mcp_scan/: __init__.py  __main__.py  cli.py  client.py  models.py  report.py  runner.py
src/mcp_scan/checks/: __init__.py  auth_header_hygiene.py  cors_policy.py  discovery_consistency.py  error_verbosity.py  fingerprint.py  multi_request_pattern.py  scope_binding.py  tool_description_anomalies.py  transport_hygiene.py  undocumented_capabilities.py
tests/: mock_server.py  stdio_mock_server.py  test_checks.py  test_client.py  test_new_checks.py  test_runner_smoke.py  test_stdio.py
