[project]
name = "mcp-recon"
version = "0.1.0"
description = "Reconnaissance and known-issue scanner for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jashid Sany", email = "jashid.sany@gmail.com" },
]
keywords = ["mcp", "security", "scanner", "reconnaissance", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.7",
    "pyright>=1.1.389",
]

[project.scripts]
mcp-recon = "mcp_recon.__main__:app"

[project.urls]
Homepage = "https://github.com/jashidsany/mcp-recon"
Repository = "https://github.com/jashidsany/mcp-recon"
Issues = "https://github.com/jashidsany/mcp-recon/issues"
"Security Policy" = "https://github.com/jashidsany/mcp-recon/blob/main/SECURITY.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_recon"]

[tool.ruff]
target-version = "py310"
line-length = 200

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "S",
    "RET",
    "SIM",
]
ignore = [
    "S101",  # assert used (fine in tests)
    "S603",  # subprocess without shell (we don't use subprocess)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
